--- a/fun-of-programming.cabal
+++ b/fun-of-programming.cabal
@@ -17,7 +17,7 @@ extra-source-files:  README.md
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Heap
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -30,14 +30,24 @@ library
                        -Wpartial-fields
                        -Wredundant-constraints
 
-test-suite doctest
+test-suite quickcheck
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:       HeapSpec
+  build-depends:       base
+                     , safe
+                     , fun-of-programming
+                     , hspec
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
-                     , doctest >= 0.16
-  ghc-options:         -threaded
+  ghc-options:         -Wall
+                       -Wcompat
+                       -Widentities
+                       -Wincomplete-record-updates
+                       -Wincomplete-uni-patterns
+                       -Wmissing-home-modules
+                       -Wpartial-fields
+                       -Wredundant-constraints
 
 source-repository head
   type:     git
