--- a/fun-of-programming.cabal
+++ b/fun-of-programming.cabal
@@ -18,6 +18,7 @@ extra-source-files:  README.md
 library
   hs-source-dirs:      src
   exposed-modules:     Heap
+                     , Editor
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
   ghc-options:         -Wall
@@ -35,6 +36,7 @@ test-suite quickcheck
   hs-source-dirs:      test
   main-is:             Spec.hs
   other-modules:       HeapSpec
+                     , EditorSpec
   build-depends:       base
                      , fun-of-programming
                      , hspec
