rename test suite and add editor property tests
The test suite was renamed from 'quickcheck' to 'fun-of-programming-test' for clarity and consistency. Additional property-based tests were added to verify the behavior of insertI and deleteI operations with respect to cursor position predicates.

- The test suite now explicitly depends on QuickCheck, which was missing previously.
- New properties ensure that editing operations maintain expected cursor invariants.

--- a/fun-of-programming.cabal
+++ b/fun-of-programming.cabal
@@ -31,7 +31,7 @@ library
                        -Wpartial-fields
                        -Wredundant-constraints
 
-test-suite quickcheck
+test-suite fun-of-programming-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
@@ -40,6 +40,7 @@ test-suite quickcheck
   build-depends:       base
                      , fun-of-programming
                      , hspec
+                     , QuickCheck
   default-language:    Haskell2010
   ghc-options:         -Wall
                        -Wcompat
